--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">Rezepteverwaltung</string>
+    <string name="name">Name</string>
+    <string name="auforderung1">Bitte geben Sie ihren Namen und Klasse einen</string>
+    <string name="passwort">Passwort</string>
 </resources>
